Cleanup a lot of unused files